--- a/硅谷外卖/waimai/package.json
+++ b/硅谷外卖/waimai/package.json
@@ -9,8 +9,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "better-scroll": "^1.11.1",
+    "date-fns": "^1.29.0",
+    "mint-ui": "^2.2.13",
+    "mockjs": "^1.0.1-beta3",
     "swiper": "^6.7.0",
     "vue": "^3.0.0",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -21,6 +26,6 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "stylus": "^0.54.8",
-    "stylus-loader": "^6.1.0"
+    "stylus-loader": "^3.0.2"
   }
 }
