--- a/硅谷外卖/waimai/package.json
+++ b/硅谷外卖/waimai/package.json
@@ -25,7 +25,8 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "stylus": "^0.54.8",
+    "babel-plugin-component": "^1.1.1",
+    "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
   }
 }
